# chetris

./: .gitignore  CMakeLists.txt  readme.md  roadmap.txt
data/model/oildrum/: oildrum.mtl
include/: Camera.h  GameModel.h  GameWorld.h  Image.h  Light.h  Light.hpp  Mesh.h  Model.h
include/core/: Component.h  Entity.h  Game.h  GameObject.h  GameWorld.h  MessageTypes.h  System.h  boilerplate.h  game_object.h  input_consumer.h  input_handler.h  rect.h  shape.h  sigil.h  sigil_board.h  transform.h  triangle_fractal.h  vertex.h
include/core/component/: Camera.h  InputController.h  Model.h  Renderer.h  Transform.h
include/core/system/: InputSystem.h  RenderSystem.h
include/core/util/: ImageInfo.h  Mesh.h  ModelManager.h  Shader.h  to_string.hpp
shader/: default.frag  default.vert  default.vs  inverse.fs  lamp.frag
src/: Camera.cpp  GameModel.cpp  GameWorld.cpp  Image.cpp  Mesh.cpp  Model.cpp  boilerplate.cpp  main.cpp  sigil.cpp  sigil_board.cpp
src/core/: CMakeLists.txt  Camera.cpp  Component.cpp  Entity.cpp  Game.cpp  GameWorld.cpp  Image.cpp  InputSystem.cpp  Mesh.cpp  ModelManager.cpp  RenderSystem.cpp  Renderer.cpp
src/test/: tests.cpp
